--- a/styles/main.scss
+++ b/styles/main.scss
@@ -18,31 +18,151 @@ html, body {
 
 body {
   background: #EBFAFF;
+  position: relative;
 }
 
-.page-container {
-  padding: 0 12px 0;
-  width: 100%;
+.menu-active {
+  overflow-y: hidden;
   height: 100%;
-  display: flex;
-  flex-direction: column;
-
-  @include for-tablet {
-    padding: 0 36px 0;
+  &::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: url("../../rtm-offer/assets/body-blur-background.png") no-repeat;
+    background-size: cover;
   }
+}
 
-  @include for-desktop {
-    padding: 0 28px 0;
+.page {
+  &__menu {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background: white;
+    z-index: 10000;
+    display: none;
+    font-family: "Roboto", sans-serif;
+
+    @include for-tablet {
+      max-width: 408px;
+    }
+
+    @include for-desktop {
+      max-width: 450px;
+    }
+
+    @include for-desktop-large {
+      max-width: 498px;
+    }
+
+    &--active {
+      display: block;
+
+      @include for-tablet {
+        position: fixed;
+      }
+    }
+
+    &-content {
+      height: 100%;
+      width: 100%;
+      padding: 32px 20px 0;
+      display: flex;
+      flex-direction: column;
+      @include for-tablet {
+        padding: 0;
+        position: relative;
+      }
+
+      &-close-btn {
+        &-wrapper {
+          display: flex;
+          justify-content: flex-end;
+          color: #777777;
+          cursor: pointer;
+
+          @include for-tablet {
+            position: absolute;
+            right: -52px;
+            top: 16px;
+            height: 40px;
+            width: 40px;
+            justify-content: center;
+            align-items: center;
+            border: 2px solid black;
+            border-radius: 6px;
+            color: black;
+          }
+        }
+
+        &-image {
+          display: flex;
+        }
+      }
+
+      &-list {
+        padding: 0;
+        list-style: none;
+        margin-top: 46px;
+        margin-bottom: 0;
+
+        @include for-tablet {
+          padding: 60px 48px 0 60px;
+          margin-top: 0;
+        }
+
+        @include for-desktop-large {
+          padding: 130px 60px 0;
+        }
+
+        &-item {
+          height: 48px;
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+          font-size: 18px;
+          font-weight: 400;
+          cursor: pointer;
+
+          @include for-tablet {
+            height: 64px;
+            font-size: 24px;
+            padding: 0 11px;
+
+            &:hover {
+              border-radius: 8px;
+              background: #ECECEC;
+            }
+          }
+        }
+      }
+    }
   }
-
-  @include for-desktop-large {
+  &__container {
     padding: 0 12px 0;
-    max-width: 1200px;
-    margin: 0 auto;
-  }
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
 
-  @include for-desktop-xl {
-    padding: 0;
+    @include for-tablet {
+      padding: 0 36px 0;
+    }
+
+    @include for-desktop {
+      padding: 0 28px 0;
+    }
+
+    @include for-desktop-large {
+      padding: 0 12px 0;
+      max-width: 1200px;
+      margin: 0 auto;
+    }
+
+    @include for-desktop-xl {
+      padding: 0;
+    }
   }
 }
 
@@ -55,6 +175,7 @@ body {
       padding-bottom: 16px;
       border-bottom: 1px solid #000000;
       font-size: 18px;
+      font-weight: 500;
 
       @include for-tablet {
         padding: 0;
@@ -66,6 +187,7 @@ body {
       display: flex;
       align-items: center;
       gap: 4px;
+      cursor: pointer;
 
       @include for-tablet {
         gap: 8px;
