--- a/styles/main.scss
+++ b/styles/main.scss
@@ -25,11 +25,14 @@ body {
   overflow-y: hidden;
   height: 100%;
   &::after {
+    z-index: 1000;
     content: '';
     position: absolute;
     width: 100%;
     height: 100%;
-    background: url("../../rtm-offer/assets/body-blur-background.png") no-repeat;
+    opacity: 1;
+    background: linear-gradient(132deg, rgba(0, 201, 214, 1) 28.5%, rgba(73, 50, 217, 1) 98.72%);
+    backdrop-filter: blur(35px);
     background-size: cover;
   }
 }
@@ -78,7 +81,9 @@ body {
       &-close-btn {
         &-wrapper {
           display: flex;
-          justify-content: flex-end;
+          width: auto;
+          height: auto;
+          margin-left: auto;
           color: #777777;
 
           @include for-tablet {
@@ -92,12 +97,12 @@ body {
             border: 2px solid black;
             border-radius: 6px;
             color: black;
+            cursor: pointer;
           }
         }
 
         &-image {
           display: flex;
-          cursor: pointer;
         }
       }
 
