--- a/styles/main.css
+++ b/styles/main.css
@@ -31,7 +31,7 @@ body {
   width: 100%;
   height: 100%;
   opacity: 1;
-  background: linear-gradient(132deg, rgb(0, 201, 214) 28.5%, rgb(73, 50, 217) 98.72%);
+  background: linear-gradient(132deg, rgba(0, 201, 214, 0.3) 28.5%, rgba(73, 50, 217, 0.3) 98.72%);
   backdrop-filter: blur(35px);
   background-size: cover;
 }
