--- a/styles/main.scss
+++ b/styles/main.scss
@@ -31,7 +31,7 @@ body {
     width: 100%;
     height: 100%;
     opacity: 1;
-    background: linear-gradient(132deg, rgba(0, 201, 214, 1) 28.5%, rgba(73, 50, 217, 1) 98.72%);
+    background: linear-gradient(132deg, rgba(0, 201, 214, .3) 28.5%, rgba(73, 50, 217, .3) 98.72%);
     backdrop-filter: blur(35px);
     background-size: cover;
   }
