--- a/rtm-algorithm-coin/styles/algorithm-coin.scss
+++ b/rtm-algorithm-coin/styles/algorithm-coin.scss
@@ -7,13 +7,7 @@
 
 html, body {
   width: 100%;
-  display: flex;
-  flex-direction: column;
   font-family: "Roboto", sans-serif;
-
-  @include for-tablet {
-    height: 100%;
-  }
 }
 
 body {
@@ -26,6 +20,7 @@ body {
   height: 100%;
   &::after {
     z-index: 1000;
+    top: 0;
     content: '';
     position: absolute;
     width: 100%;
@@ -150,10 +145,13 @@ body {
     height: 100%;
     display: flex;
     flex-direction: column;
+    margin-bottom: 50px;
 
     @include for-tablet {
       padding: 0 36px 0;
+      margin-bottom: 35px;
     }
+
 
     @include for-desktop {
       padding: 0 28px 0;
@@ -162,7 +160,7 @@ body {
     @include for-desktop-large {
       padding: 0 12px 0;
       max-width: 1200px;
-      margin: 0 auto;
+      margin: 0 auto 50px;
     }
 
     @include for-desktop-xl {
@@ -282,203 +280,299 @@ body {
 
   &__main {
     &-content-wrapper {
-      margin-top: 22px;
-      height: 100%;
+      margin-top: 32px;
+      margin-bottom: 24px;
+      padding: 12px 10px 18px;
       display: flex;
       flex-direction: column;
       align-items: center;
+      border-radius: 20px;
+      background: #FFF;
 
       @include for-tablet {
-        align-items: unset;
-        display: grid;
-        grid-template-columns: 1fr auto;
-        grid-template-rows: auto 1fr;
+        margin-top: 20px;
+        margin-bottom: 32px;
+        padding: 12px 22px 30px;
+      }
+
+      @include for-desktop {
+        margin-bottom: 30px;
       }
 
       @include for-desktop-large {
-        margin-top: 64px;
+        margin-top: 60px;
+        margin-bottom: 37px;
+        padding: 12px 38px 40px;
+      }
+
+      @include for-desktop-xl {
+        padding: 12px 50px 40px;
       }
     }
 
-    &-logo {
-
+    &-progress {
       &-wrapper {
-        position: relative;
-
-        @include for-desktop {
-          left: -6px;
-        }
-      }
-
-      &--explore {
-        margin-top: 16px;
-        margin-bottom: 45px;
+        display: flex;
+        width: 100%;
+        align-items: center;
+        flex-direction: column;
+        gap: 23px;
 
         @include for-tablet {
-          margin: 0;
-          grid-column: 1;
-          grid-row: 1;
-        }
-
-        @include for-desktop-large {
-          margin-top: 23px;
-        }
-
-        img {
-          @include for-tablet {
-            width: 336px;
-          }
-
-          @include for-desktop {
-            width: 492px;
-            height: 92px;
-          }
-        }
-      }
-
-      &--welcome {
-        margin-bottom: 30px;
-        height: fit-content;
-        img {
-          width: 100%;
-
-          @include for-tablet {
-            width: 320px;
-            height: 313px;
-          }
-
-          @include for-desktop {
-            width: 393px;
-            height: 417px;
-          }
-
-          @include for-desktop-large {
-            width: 625px;
-            height: 611px;
-          }
-
-          @include for-desktop-xl {
-            margin-bottom: 38px;
-          }
-        }
-
-        @include for-tablet {
-          margin: 6px 0 0;
-        }
-      }
-
-      &-text {
-        margin: 12px 0 0;
-        text-align: center;
-        font-size: 16px;
-        font-weight: 500;
-
-        @include for-tablet {
-          margin: 24px 0 0;
-          font-size: 20px;
-          text-align: left;
-        }
-
-        @include for-desktop {
-          font-size: 28px;
+          gap: 16px;
         }
       }
 
       &-title {
-        font-size: 74px;
-        font-style: normal;
-        font-weight: 700;
         margin: 0;
-        text-align: center;
+        color: #777;
+        font-size: 14px;
+        font-weight: 500;
 
         @include for-tablet {
-          text-align: left;
-          position: relative;
-          left: -5px;
-          font-size: 84px;
+          font-size: 20px;
+        }
+      }
+
+      &-bar {
+        width: 100%;
+        overflow: hidden;
+        appearance: none;
+        background: white;
+
+        &::-webkit-progress-bar {
+          background: white;
+          height: 16px;
+          border: 1px solid #EBFAFF;
+          border-radius: 6px;
         }
 
-        @include for-desktop {
-          left: 0;
-          font-size: 120px;
+        &::-webkit-progress-value {
+          background: linear-gradient(90deg, #B276FF 0%, #FEAB00 97.75%);
+        }
+
+        &::-moz-progress-bar {
+          background: white;
+          height: 16px;
+          border: 1px solid #EBFAFF;
+          border-radius: 6px;
         }
       }
     }
 
-    &-btn {
-      width: 296px;
-      height: 63px;
-      font-size: 20px;
-      font-weight: 500;
+    &-algorithms {
+      &-wrapper {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+      }
+
+      &-content {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 12px;
+        justify-content: center;
+
+        @include for-tablet {
+          gap: 16px;
+          max-width: 749px;
+        }
+
+        @include for-desktop-large {
+          gap: 20px;
+        }
+      }
+
+      &-item {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 5px;
+        padding: 6px 24px;
+        border-radius: 12px;
+        border: 0.5px solid #000;
+        background: #FFF;
+        cursor: pointer;
+
+        @include for-tablet {
+          padding: 12px 44px;
+          gap: 10px;
+        }
+
+        &-title {
+          margin: 0;
+          font-size: 16px;
+          font-weight: 500;
+          //background: linear-gradient(90deg, rgba(255,204,126,1) 0%, rgba(5,0,250,1) 100%);
+          background: linear-gradient(90deg, rgba(255,204,126,1) 0%, rgba(50,0,250,1) 100%);
+          background-clip: text;
+          -webkit-background-clip: text;
+          -webkit-text-fill-color: transparent;
+
+          @include for-tablet {
+            font-size: 20px;
+          }
+        }
+
+        &-text {
+          margin: 0;
+          color: #777;
+          text-align: center;
+          font-size: 12px;
+          font-weight: 500;
+        }
+      }
+
+      &-title {
+        margin: 20px 0;
+        color: #000;
+        text-align: center;
+        font-size: 18px;
+        font-style: normal;
+        font-weight: 500;
+
+        @include for-tablet {
+          margin: 14px 0 20px;
+          font-size: 32px;
+        }
+
+        @include for-desktop-large {
+          margin: 50px 0 25px;
+          font-size: 60px;
+        }
+      }
+    }
+
+    &-coins {
+      &-wrapper {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-bottom: 50px;
+
+        @include for-tablet {
+          margin-bottom: 30px;
+        }
+
+        @include for-desktop {
+          margin-bottom: 37px;
+        }
+
+        @include for-desktop-large {
+          margin-bottom: 50px;
+        }
+      }
+
+      &-content {
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
+        gap: 10px;
+
+        @include for-tablet {
+          gap: 12px;
+        }
+      }
+
+      &-title {
+        margin: 0 0 12px;
+        color: #777;
+        font-size: 20px;
+        font-weight: 500;
+
+        @include for-tablet {
+          margin: 0 0 17px;
+        }
+      }
+
+      &-item {
+        border-radius: 16px;
+        border: 0.5px solid #000;
+        background: #FFF;
+        text-align: center;
+        padding: 12px 24px;
+        cursor: pointer;
+
+        @include for-tablet {
+          padding: 16px 32px;
+        }
+
+        &-text {
+          margin: 0;
+          color: #777;
+          font-size: 14px;
+          font-weight: 500;
+
+          @include for-tablet {
+            font-size: 20px;
+          }
+        }
+      }
+    }
+
+    &-buttons {
+      display: flex;
+      width: 170px;
+      height: 55px;
+      justify-content: space-between;
+      margin: 0 auto 0;
+    }
+
+    &-button {
+      width: 50px;
+      height: 55px;
+      border: 0.5px solid black;
       border-radius: 16px;
-      border: 1px solid #000;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
       background: white;
+      padding: 0;
+      margin-bottom: 50px;
       cursor: pointer;
-      margin-bottom: 55px;
 
-      &-text {
-        background: linear-gradient(93deg, #FFCC7E -3.26%, #0500FA 118.87%), #000;
-        background-clip: text;
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
+      &--left {
+        img {
+          position: relative;
+          right: 2px;
+        }
       }
 
-      @include for-tablet {
-        height: 56px;
-        width: 200px;
-        position: relative;
-        grid-column: 1;
-        grid-row: 1;
-        top: -16px;
-        align-self: flex-end;
-        margin-bottom: 0;
-      }
-
-      @include for-desktop {
-        top: -35px;
-      }
-
-      @include for-desktop-large {
-        width: 270px;
-        height: 70px;
-        top: -129px;
-      }
-
-      @include for-desktop-xl {
-        top: -167px;
+      &--right {
+        img {
+          position: relative;
+          left: 2px;
+        }
       }
     }
 
     &-footer {
-      display: none;
+      padding-bottom: 22px;
 
       @include for-tablet {
-        display: block;
-        padding-bottom: 16px;
+        padding-bottom: 21px;
       }
 
       @include for-desktop {
-        padding-bottom: 39px;
+        padding-bottom: 28px;
       }
 
       @include for-desktop-large {
-        padding-bottom: 25px;
+        padding-bottom: 33px;
       }
 
       @include for-desktop-xl {
-        padding-bottom: 72px;
+        padding-bottom: 28px;
       }
 
       &-copyright {
-        display: none;
-
-        @include for-tablet {
-          display: block;
-          margin: 0;
-          font-size: 10px;
-          font-weight: 500;
-          text-align: center;
-        }
+        margin: 0;
+        font-size: 10px;
+        font-weight: 500;
+        text-align: center;
       }
     }
   }
