--- a/rtm-main/styles/main.css
+++ b/rtm-main/styles/main.css
@@ -423,6 +423,7 @@ body {
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  text-decoration: none;
 }
 @media (min-width: 768px) {
   .rtm__main-btn {
