--- a/rtm-algorithm-coin/styles/algorithm-coin.css
+++ b/rtm-algorithm-coin/styles/algorithm-coin.css
@@ -336,21 +336,20 @@ body {
   overflow: hidden;
   appearance: none;
   background: white;
+  border: 1px solid #EBFAFF;
+  border-radius: 6px;
+  height: 16px;
 }
 .rtm__main-progress-bar::-webkit-progress-bar {
   background: white;
-  height: 16px;
-  border: 1px solid #EBFAFF;
   border-radius: 6px;
 }
 .rtm__main-progress-bar::-webkit-progress-value {
   background: linear-gradient(90deg, #B276FF 0%, #FEAB00 97.75%);
 }
 .rtm__main-progress-bar::-moz-progress-bar {
-  background: white;
-  height: 16px;
-  border: 1px solid #EBFAFF;
-  border-radius: 6px;
+  background: linear-gradient(90deg, #B276FF 0%, #FEAB00 97.75%);
+  appearance: none;
 }
 .rtm__main-algorithms-wrapper {
   width: 100%;
