--- a/rtm-electricity/styles/electricity.scss
+++ b/rtm-electricity/styles/electricity.scss
@@ -7,11 +7,14 @@
 
 html, body {
   width: 100%;
+  height: 100%;
   font-family: "Roboto", sans-serif;
 }
 
 body {
   background: #EBFAFF;
+  display: flex;
+  flex-direction: column;
   position: relative;
 }
 
@@ -160,7 +163,7 @@ body {
     @include for-desktop-large {
       padding: 0 12px 0;
       max-width: 1200px;
-      margin: 0 auto 50px;
+      margin: 0 auto 63px;
     }
 
     @include for-desktop-xl {
@@ -282,7 +285,7 @@ body {
     &-content-wrapper {
       margin-top: 32px;
       margin-bottom: 24px;
-      padding: 12px 10px 18px;
+      padding: 12px 10px 24px;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -301,7 +304,7 @@ body {
 
       @include for-desktop-large {
         margin-top: 60px;
-        margin-bottom: 37px;
+        margin-bottom: 50px;
         padding: 12px 38px 40px;
       }
 
@@ -359,7 +362,7 @@ body {
       }
     }
 
-    &-algorithms {
+    &-electricity {
       &-wrapper {
         width: 100%;
         display: flex;
@@ -369,61 +372,58 @@ body {
 
       &-content {
         display: flex;
-        flex-wrap: wrap;
-        gap: 12px;
-        justify-content: center;
+        gap: 7.5px;
+        justify-content: space-between;
 
-        @include for-tablet {
-          gap: 16px;
-          max-width: 749px;
-        }
-
-        @include for-desktop-large {
-          gap: 20px;
-        }
-      }
-
-      &-item {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        gap: 5px;
-        padding: 6px 24px;
-        border-radius: 12px;
-        border: 0.5px solid #000;
-        background: #FFF;
-        cursor: pointer;
-
-        @include for-tablet {
-          padding: 12px 44px;
-          gap: 10px;
-        }
-
-        &-title {
-          margin: 0;
-          font-size: 16px;
+        &-button {
+          height: 73px;
+          width: 40px;
+          background: white;
+          font-size: 40px;
           font-weight: 500;
           background: linear-gradient(90deg, rgba(255,204,126,1) 0%, rgba(50,0,250,1) 100%);
           background-clip: text;
           -webkit-background-clip: text;
           -webkit-text-fill-color: transparent;
-
-          @include for-tablet {
-            font-size: 20px;
-          }
+          border-radius: 16px;
+          border: 0.5px solid #000;
+          padding: 0;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          cursor: pointer;
         }
 
-        &-text {
-          margin: 0;
-          color: #777;
-          text-align: center;
-          font-size: 12px;
+        &-value {
+          height: 73px;
+          width: 114px;
+          background: white;
+          font-size: 40px;
           font-weight: 500;
+          background: linear-gradient(90deg, rgba(255,204,126,1) 0%, rgba(50,0,250,1) 100%);
+          background-clip: text;
+          -webkit-background-clip: text;
+          -webkit-text-fill-color: transparent;
+          border-radius: 16px;
+          border: 0.5px solid #000;
+          display: flex;
+          align-items: center;
+          justify-content: center;
         }
       }
 
+      &-subtitle {
+        margin-top: 10px;
+        margin-bottom: 0;
+        color: #000;
+        text-align: center;
+        font-size: 20px;
+        font-weight: 500;
+        opacity: 0.3;
+      }
+
       &-title {
-        margin: 20px 0;
+        margin: 20px 0 24px;
         color: #000;
         text-align: center;
         font-size: 18px;
@@ -431,81 +431,13 @@ body {
         font-weight: 500;
 
         @include for-tablet {
-          margin: 14px 0 20px;
+          margin: 14px 0 25px;
           font-size: 32px;
         }
 
         @include for-desktop-large {
           margin: 50px 0 25px;
           font-size: 60px;
-        }
-      }
-    }
-
-    &-coins {
-      &-wrapper {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        margin-bottom: 50px;
-
-        @include for-tablet {
-          margin-bottom: 30px;
-        }
-
-        @include for-desktop {
-          margin-bottom: 37px;
-        }
-
-        @include for-desktop-large {
-          margin-bottom: 50px;
-        }
-      }
-
-      &-content {
-        display: flex;
-        flex-wrap: wrap;
-        align-items: center;
-        justify-content: center;
-        gap: 10px;
-
-        @include for-tablet {
-          gap: 12px;
-        }
-      }
-
-      &-title {
-        margin: 0 0 12px;
-        color: #777;
-        font-size: 20px;
-        font-weight: 500;
-
-        @include for-tablet {
-          margin: 0 0 17px;
-        }
-      }
-
-      &-item {
-        border-radius: 16px;
-        border: 0.5px solid #000;
-        background: #FFF;
-        text-align: center;
-        padding: 12px 24px;
-        cursor: pointer;
-
-        @include for-tablet {
-          padding: 16px 32px;
-        }
-
-        &-text {
-          margin: 0;
-          color: #777;
-          font-size: 14px;
-          font-weight: 500;
-
-          @include for-tablet {
-            font-size: 20px;
-          }
         }
       }
     }
@@ -551,7 +483,7 @@ body {
       padding-bottom: 22px;
 
       @include for-tablet {
-        padding-bottom: 21px;
+        padding-bottom: 30px;
       }
 
       @include for-desktop {
