--- a/rtm-asic/styles/asic.css
+++ b/rtm-asic/styles/asic.css
@@ -11,8 +11,7 @@ html, body {
 
 body {
   background: #EBFAFF;
-  display: flex;
-  flex-direction: column;
+  display: grid;
   position: relative;
 }
 
@@ -449,6 +448,7 @@ body {
   left: 2px;
 }
 .rtm__main-footer {
+  align-self: flex-end;
   padding-bottom: 22px;
 }
 @media (min-width: 768px) {
@@ -478,4 +478,4 @@ body {
   text-align: center;
 }
 
-/*# sourceMappingURL=electricity.css.map */
+/*# sourceMappingURL=asic.css.map */
