algorithm footer fixed

--- a/rtm-algorithm-coin/styles/algorithm-coin.css
+++ b/rtm-algorithm-coin/styles/algorithm-coin.css
@@ -10,6 +10,7 @@ html, body {
 
 body {
   background: #EBFAFF;
+  display: grid;
   position: relative;
 }
 
@@ -530,6 +531,7 @@ body {
   left: 2px;
 }
 .rtm__main-footer {
+  align-self: flex-end;
   padding-bottom: 22px;
 }
 @media (min-width: 768px) {
