--- a/rtm-algorithm-coin/styles/algorithm-coin.scss
+++ b/rtm-algorithm-coin/styles/algorithm-coin.scss
@@ -274,6 +274,7 @@ body {
           background-clip: text;
           -webkit-background-clip: text;
           -webkit-text-fill-color: transparent;
+          -webkit-box-decoration-break: clone;
         }
       }
     }
@@ -408,6 +409,7 @@ body {
           background-clip: text;
           -webkit-background-clip: text;
           -webkit-text-fill-color: transparent;
+          -webkit-box-decoration-break: clone;
 
           @include for-tablet {
             font-size: 20px;
