--- a/rtm-algorithm-coin/styles/algorithm-coin.scss
+++ b/rtm-algorithm-coin/styles/algorithm-coin.scss
@@ -1,3 +1,4 @@
+@import "../../../rtm-offer/fonts/fonts.css";
 @import "mixins";
 @import "normalize.css";
 
@@ -7,6 +8,7 @@
 
 html, body {
   width: 100%;
+  height: 100%;
   font-family: "Roboto", sans-serif;
 }
 
@@ -191,6 +193,13 @@ body {
       display: flex;
       align-items: center;
       gap: 4px;
+      &:hover {
+        color: rgba(124, 124, 124, 1);
+      }
+      &:active {
+        color: rgba(188, 188, 188, 1);
+      }
+
 
       @include for-tablet {
         gap: 8px;
@@ -232,6 +241,9 @@ body {
       &-selector {
         position: relative;
         cursor: pointer;
+        &:hover {
+          color: rgba(124, 124, 124, 1);
+        }
 
         &:first-of-type {
           &::after {
@@ -395,10 +407,21 @@ body {
         border: 0.5px solid #000;
         background: #FFF;
         cursor: pointer;
+        &:hover {
+          background: #F8F8F8;
+        }
+
+        &:active {
+          background: #F5F4F4;
+        }
 
         @include for-tablet {
           padding: 12px 44px;
           gap: 10px;
+        }
+
+        &--disabled {
+          opacity: .3;
         }
 
         &-title {
@@ -495,6 +518,13 @@ body {
         text-align: center;
         padding: 12px 24px;
         cursor: pointer;
+        &:hover {
+          background: #F8F8F8;
+        }
+
+        &:active {
+          background: #F5F4F4;
+        }
 
         @include for-tablet {
           padding: 16px 32px;
@@ -534,6 +564,13 @@ body {
       padding: 0;
       margin-bottom: 50px;
       cursor: pointer;
+      &:hover {
+        background: #F8F8F8;
+      }
+
+      &:active {
+        background: #F5F4F4;
+      }
 
       &--left {
         img {
