--- a/rtm-electricity/styles/electricity.css
+++ b/rtm-electricity/styles/electricity.css
@@ -1,3 +1,4 @@
+@import "../../../rtm-offer/fonts/fonts.css";
 @import "normalize.css";
 * {
   box-sizing: border-box;
@@ -191,6 +192,12 @@ body {
   align-items: center;
   gap: 4px;
 }
+.rtm__main-menu-mobile:hover {
+  color: rgb(124, 124, 124);
+}
+.rtm__main-menu-mobile:active {
+  color: rgb(188, 188, 188);
+}
 @media (min-width: 768px) {
   .rtm__main-menu-mobile {
     gap: 8px;
@@ -233,6 +240,9 @@ body {
 .rtm__main-menu-language-selector {
   position: relative;
   cursor: pointer;
+}
+.rtm__main-menu-language-selector:hover {
+  color: rgb(124, 124, 124);
 }
 .rtm__main-menu-language-selector:first-of-type::after {
   content: "";
@@ -371,11 +381,6 @@ body {
   background: white;
   font-size: 40px;
   font-weight: 500;
-  background: linear-gradient(90deg, rgb(255, 204, 126) 0%, rgb(50, 0, 250) 100%);
-  background-clip: text;
-  -webkit-box-decoration-break: clone;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
   border-radius: 16px;
   border: 0.5px solid #000;
   padding: 0;
@@ -383,6 +388,19 @@ body {
   align-items: center;
   justify-content: center;
   cursor: pointer;
+}
+.rtm__main-electricity-content-button:hover {
+  background: #F8F8F8;
+}
+.rtm__main-electricity-content-button:active {
+  background: #F5F4F4;
+}
+.rtm__main-electricity-content-button-text {
+  background: linear-gradient(90deg, rgb(255, 204, 126) 0%, rgb(50, 0, 250) 100%);
+  background-clip: text;
+  -webkit-box-decoration-break: clone;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 .rtm__main-electricity-content-value {
   height: 73px;
@@ -450,6 +468,12 @@ body {
   padding: 0;
   margin-bottom: 50px;
   cursor: pointer;
+}
+.rtm__main-button:hover {
+  background: #F8F8F8;
+}
+.rtm__main-button:active {
+  background: #F5F4F4;
 }
 .rtm__main-button--left img {
   position: relative;
