--- a/rtm-main/styles/main.scss
+++ b/rtm-main/styles/main.scss
@@ -1,3 +1,4 @@
+@import "../../../rtm-offer/fonts/fonts.css";
 @import "mixins";
 @import "normalize.css";
 
@@ -192,6 +193,12 @@ body {
       display: flex;
       align-items: center;
       gap: 4px;
+      &:hover {
+        color: rgba(124, 124, 124, 1);
+      }
+      &:active {
+        color: rgba(188, 188, 188, 1);
+      }
 
       @include for-tablet {
         gap: 8px;
@@ -233,6 +240,9 @@ body {
       &-selector {
         position: relative;
         cursor: pointer;
+        &:hover {
+          color: rgba(124, 124, 124, 1);
+        }
 
         &:first-of-type {
           &::after {
@@ -415,6 +425,14 @@ body {
       background: white;
       cursor: pointer;
       margin-bottom: 55px;
+
+      &:hover {
+        background: #F8F8F8;
+      }
+
+      &:active {
+        background: #F5F4F4;
+      }
 
       &-text {
         background: linear-gradient(93deg, #FFCC7E -3.26%, #0500FA 118.87%), #000;
