--- a/rtm-price-list/styles/price-list.scss
+++ b/rtm-price-list/styles/price-list.scss
@@ -1,4 +1,4 @@
-@import "../../../rtm-offer/fonts/fonts.css";
+@import "../../../rtm-offer/fonts/search-fonts.css";
 @import "mixins";
 @import "normalize.css";
 
@@ -8,13 +8,17 @@
 
 html, body {
   width: 100%;
-  height: 100%;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
   font-family: "Roboto", sans-serif;
 }
 
 body {
   background: #EBFAFF;
-  display: grid;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
   position: relative;
 }
 
@@ -146,9 +150,7 @@ body {
     padding: 0 12px 0;
     width: 100%;
     height: 100%;
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 50px;
+    margin-bottom: 30px;
 
     @include for-tablet {
       padding: 0 36px 0;
@@ -173,7 +175,7 @@ body {
 }
 
 .rtm {
-  &__main-menu {
+  &__price-list-menu {
     &-wrapper {
       display: flex;
       justify-content: space-between;
@@ -196,6 +198,7 @@ body {
       &:hover {
         color: rgba(124, 124, 124, 1);
       }
+
       &:active {
         color: rgba(188, 188, 188, 1);
       }
@@ -283,29 +286,28 @@ body {
         &--active {
           background: linear-gradient(90deg, #B276FF 0%, #FEAB00 97.75%);
           background-clip: text;
+          -webkit-box-decoration-break: clone;
           -webkit-background-clip: text;
           -webkit-text-fill-color: transparent;
-          -webkit-box-decoration-break: clone;
         }
       }
     }
   }
 
-  &__main {
-    &-content-wrapper {
+  &__price-list {
+    &-title {
+      text-align: center;
+      font-size: 24px;
+      font-weight: 700;
+      color: #000;
       margin-top: 32px;
-      margin-bottom: 24px;
-      padding: 12px 10px 24px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      border-radius: 20px;
-      background: #FFF;
+      margin-bottom: 20px;
 
       @include for-tablet {
-        margin-top: 20px;
-        margin-bottom: 32px;
-        padding: 12px 22px 30px;
+        font-weight: 500;
+        font-size: 32px;
+        margin-top: 39px;
+        margin-bottom: 14px;
       }
 
       @include for-desktop {
@@ -313,191 +315,164 @@ body {
       }
 
       @include for-desktop-large {
-        margin-top: 60px;
-        margin-bottom: 50px;
-        padding: 12px 38px 40px;
+        font-size: 60px;
+        margin-bottom: 44px;
+        margin-top: 50px;
+      }
+    }
+
+    &-wrapper {
+      padding: 20px 10px;
+      border-radius: 12px;
+      background: #FFF;
+
+      @include for-tablet {
+        padding: 30px 20px;
+      }
+
+      @include for-desktop-large {
+        padding: 40px 38px 48px;
       }
 
       @include for-desktop-xl {
-        padding: 12px 50px 40px;
+        padding: 40px 50px 48px;
       }
     }
 
-    &-progress {
-      &-wrapper {
-        display: flex;
-        width: 100%;
-        align-items: center;
-        flex-direction: column;
-        gap: 23px;
-
-        @include for-tablet {
-          gap: 16px;
-        }
-      }
-
-      &-title {
-        margin: 0;
-        color: #777;
-        font-size: 14px;
-        font-weight: 500;
-
-        @include for-tablet {
-          font-size: 20px;
-        }
-      }
-
-      &-bar {
-        width: 100%;
-        overflow: hidden;
-        appearance: none;
-        background: white;
-        border: 1px solid #EBFAFF;
-        border-radius: 6px;
-        height: 16px;
-
-        &::-webkit-progress-bar {
-          background: white;
-          border-radius: 6px;
-        }
-
-        &::-webkit-progress-value {
-          background: linear-gradient(90deg, #B276FF 0%, #FEAB00 97.75%);
-        }
-
-        &::-moz-progress-bar {
-          background: linear-gradient(90deg, #B276FF 0%, #FEAB00 97.75%);
-          appearance: none;
-        }
-      }
-    }
-
-    &-asic {
-      &-wrapper {
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-      }
-
-      &-content {
-        display: flex;
-        gap: 7.5px;
-        justify-content: space-between;
-
-        &-button {
-          height: 73px;
-          width: 40px;
-          background: white;
-          font-size: 40px;
-          font-weight: 500;
-          border-radius: 16px;
-          border: 0.5px solid #000;
-          padding: 0;
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          cursor: pointer;
-          &:hover {
-            background: #F8F8F8;
-          }
-          &:active {
-            background: #F5F4F4;
-          }
-
-          &-text {
-            background: linear-gradient(90deg, rgba(255,204,126,1) 0%, rgba(50,0,250,1) 100%);
-            background-clip: text;
-            -webkit-box-decoration-break: clone;
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-          }
-        }
-
-        &-value {
-          height: 73px;
-          width: 114px;
-          background: white;
-          font-size: 40px;
-          font-weight: 500;
-          background: linear-gradient(90deg, rgba(255,204,126,1) 0%, rgba(50,0,250,1) 100%);
-          background-clip: text;
-          -webkit-box-decoration-break: clone;
-          -webkit-background-clip: text;
-          -webkit-text-fill-color: transparent;
-          border-radius: 16px;
-          border: 0.5px solid #000;
-          display: flex;
-          align-items: center;
-          justify-content: center;
-        }
-      }
-
-      &-title {
-        margin: 20px 0 24px;
-        color: #000;
-        text-align: center;
-        font-size: 18px;
-        font-style: normal;
-        font-weight: 500;
-
-        @include for-tablet {
-          margin: 14px 0 25px;
-          font-size: 32px;
-        }
-
-        @include for-desktop-large {
-          margin: 50px 0 25px;
-          font-size: 60px;
-        }
-      }
-    }
-
-    &-buttons {
-      display: flex;
-      width: 170px;
-      height: 55px;
-      justify-content: space-between;
-      margin: 0 auto 0;
-    }
-
-    &-button {
-      width: 50px;
-      height: 55px;
-      border: 0.5px solid black;
-      border-radius: 16px;
+    &-content {
+      gap: 20px;
       display: flex;
       flex-direction: column;
+      overflow-x: auto;
+
+      @include for-desktop-large {
+        gap: 30px;
+      }
+    }
+
+    &-row {
+      font-family: "Inter", sans-serif;
+      display: grid;
+      grid-template-columns: 2fr 1fr 1fr 1fr;
+      min-width: 426px;
+      width: 100%;
+      padding: 0 20px;
+      min-height: 40px;
+      gap: 20px;
+      border-radius: 10px;
       align-items: center;
-      justify-content: center;
-      background: white;
-      padding: 0;
-      margin-bottom: 50px;
+      border: 1px solid rgba(207, 207, 207, 0.81);
       cursor: pointer;
       &:hover {
         background: #F8F8F8;
       }
+
       &:active {
         background: #F5F4F4;
       }
 
-      &--left {
-        img {
-          position: relative;
-          right: 2px;
+      @include for-tablet {
+        min-height: 56px;
+      }
+
+      @include for-desktop {
+        padding: 0 27px;
+      }
+
+      @include for-desktop-large {
+        padding: 0 90px 0 42px;
+      }
+
+      @include for-desktop-xl {
+        padding: 0 102px 0 30px;
+      }
+
+      &-wrapper {
+        display: flex;
+        flex-direction: column;
+        gap: 4px;
+      }
+
+      &--header {
+        border: none;
+        height: auto;
+        min-height: auto;
+        cursor: initial;
+
+        &:hover {
+          background: white;
+        }
+
+        &:active {
+          background: white;
         }
       }
 
-      &--right {
-        img {
-          position: relative;
-          left: 2px;
+      &-item {
+        font-size: 12px;
+        color: #373737;
+        font-weight: 700;
+        max-width: 100%;
+        justify-self: flex-end;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        overflow: hidden;
+        padding: 6px 0;
+        text-align: right;
+
+        @include for-tablet {
+          font-size: 16px;
+        }
+
+        @include for-desktop-large {
+          font-size: 18px;
+        }
+
+        &:nth-of-type(3) {
+          text-overflow: initial;
+          white-space: initial;
+          overflow: initial;
+          word-break: break-word;
+        }
+
+        &:first-of-type {
+          justify-self: flex-start;
+        }
+
+        &--header {
+          color: #777;
+          font-size: 14px;
+          font-weight: 400;
+          padding: 0;
+
+          @include for-tablet {
+            font-size: 18px;
+          }
+        }
+      }
+
+      &-title {
+        color: #FEAB00;
+        font-size: 14px;
+        padding-left: 8px;
+        margin-top: 20px;
+        margin-bottom: 15px;
+        font-weight: 500;
+
+        @include for-tablet {
+          font-size: 20px;
+          margin-top: 40px;
+        }
+
+        @include for-desktop-large {
+          padding-left: 42px;
         }
       }
     }
 
     &-footer {
-      align-self: flex-end;
+      width: 100%;
+      margin-top: auto;
       padding-bottom: 22px;
 
       @include for-tablet {
