--- a/rtm-asic/styles/asic.scss
+++ b/rtm-asic/styles/asic.scss
@@ -8,13 +8,14 @@
 
 html, body {
   width: 100%;
-  height: 100%;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
   font-family: "Roboto", sans-serif;
 }
 
 body {
   background: #EBFAFF;
-  display: grid;
   position: relative;
 }
 
