--- a/rtm-electricity/styles/electricity.css
+++ b/rtm-electricity/styles/electricity.css
@@ -7,12 +7,14 @@
 html, body {
   width: 100%;
   height: 100%;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
   font-family: "Roboto", sans-serif;
 }
 
 body {
   background: #EBFAFF;
-  display: grid;
   position: relative;
 }
 
@@ -484,6 +486,7 @@ body {
   left: 2px;
 }
 .rtm__main-footer {
+  width: 100%;
   align-self: flex-end;
   padding-bottom: 22px;
 }
