--- a/rtm-electricity/styles/electricity.scss
+++ b/rtm-electricity/styles/electricity.scss
@@ -9,12 +9,14 @@
 html, body {
   width: 100%;
   height: 100%;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
   font-family: "Roboto", sans-serif;
 }
 
 body {
   background: #EBFAFF;
-  display: grid;
   position: relative;
 }
 
@@ -508,6 +510,7 @@ body {
     }
 
     &-footer {
+      width: 100%;
       align-self: flex-end;
       padding-bottom: 22px;
 
