--- a/rtm-main/styles/main.scss
+++ b/rtm-main/styles/main.scss
@@ -6,14 +6,26 @@
   box-sizing: border-box;
 }
 
+.container {
+  height: 100% !important;
+  max-width: 1200px !important;
+}
+
 html, body {
+  min-height: 100vh;
+  height: 100%;
   width: 100%;
   display: flex;
   flex-direction: column;
   font-family: "Roboto", sans-serif;
 
-  @include for-tablet {
-    height: 100%;
+  a {
+    text-decoration: none;
+    color: black;
+    cursor: pointer;
+    &:visited {
+      color: inherit;
+    }
   }
 }
 
@@ -38,7 +50,7 @@ body {
   }
 }
 
-.page {
+.main {
   &__menu {
     width: 100%;
     height: 100%;
