--- a/rtm-price-list/styles/price-list.css
+++ b/rtm-price-list/styles/price-list.css
@@ -6,7 +6,6 @@
 
 html, body {
   width: 100%;
-  height: 100%;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -16,6 +15,14 @@ html, body {
 body {
   background: #EBFAFF;
   position: relative;
+}
+body a {
+  text-decoration: none;
+  color: black;
+  cursor: pointer;
+}
+body a:visited {
+  color: inherit;
 }
 
 .menu-active {
@@ -224,6 +231,12 @@ body {
   font-size: 18px;
   font-style: normal;
   font-weight: 500;
+}
+.rtm__price-list-menu-logo:hover {
+  color: rgb(124, 124, 124);
+}
+.rtm__price-list-menu-logo:active {
+  color: rgb(188, 188, 188);
 }
 @media (min-width: 768px) {
   .rtm__price-list-menu-logo {
